--- a/src/components/Profile.css
+++ b/src/components/Profile.css
@@ -1,3 +1,10 @@
+.panel {
+    padding-top: 30px;
+    padding-right: 40px;
+    padding-bottom: 80px;
+    padding-left: 40px;
+}
+
 .paragraph {
     text-align: left;
     padding-top: 20px;
