--- a/src/components/css/profile.scss
+++ b/src/components/css/profile.scss
@@ -1,3 +1,4 @@
+@import 'variables';
 
 .paragraph {
     text-align: left;
@@ -12,5 +13,5 @@
 }
 
 .title {
-    background-color: lightblue;
+    background-color: $color-red-demokrat;
 }
