changed the paragraph

--- a/src/components/css/profile.css
+++ b/src/components/css/profile.css
@@ -6,6 +6,12 @@
   padding-left: 20px;
 }
 
+mark {
+  background-color: transparent;
+  font-weight: bold;
+  color: #01389D;
+}
+
 .visimisi {
   text-align: center;
 }
