--- a/src/components/css/profile.scss
+++ b/src/components/css/profile.scss
@@ -8,6 +8,12 @@
     padding-left: 20px;
 }
 
+mark {
+    background-color: transparent;
+    font-weight: bold;
+    color: $color-main;
+}
+
 .visimisi {
     text-align: center;
 }
