--- a/src/components/css/contact.css
+++ b/src/components/css/contact.css
@@ -16,11 +16,22 @@
 
 .font-awesome {
   color: #E1E4EB;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  width: 35px;
+  height: 35px;
+  cursor: pointer;
+  border-radius: 2px;
   font-size: 30px;
+  color: #E1E4EB;
+  text-align: center;
+  line-height: 35px;
+  margin-right: 15px;
+  margin-bottom: 5px;
 }
 
 .font-awesome:hover {
   color: #47B8D6;
-  font-size: 30px;
 }
 /*# sourceMappingURL=contact.css.map */
