--- a/src/components/css/panel.css
+++ b/src/components/css/panel.css
@@ -2,9 +2,9 @@
   display: none;
   position: fixed;
   bottom: 20px;
-  right: 30px;
-  z-index: 99;
-  font-size: 18px;
+  right: 20px;
+  z-index: 70;
+  font-size: 20px;
   border: none;
   outline: none;
   background-color: #47B8D6;
@@ -13,6 +13,7 @@
   padding: 15px;
   border-radius: 40px;
   opacity: 0.5;
+  text-align: center;
 }
 
 #myBtn:hover {
