--- a/src/components/css/panel.scss
+++ b/src/components/css/panel.scss
@@ -4,9 +4,9 @@
     display: none;
     position: fixed;
     bottom: 20px;
-    right: 30px;
-    z-index: 99;
-    font-size: 18px;
+    right: 20px;
+    z-index: 70;
+    font-size: 20px;
     border: none;
     outline: none;
     background-color: $color-secondary;
@@ -15,6 +15,7 @@
     padding: 15px;
     border-radius: 40px;
     opacity: 0.5;
+    text-align: center;
   }
   
   #myBtn:hover {
