--- a/src/components/css/contact.css
+++ b/src/components/css/contact.css
@@ -7,7 +7,7 @@
   width: 100%;
   background-color: #01389D;
   text-align: center;
-  color: #E1E4EB;
+  color: #47B8D6;
 }
 
 .socmed {
@@ -15,7 +15,7 @@
 }
 
 .font-awesome {
-  color: #E1E4EB;
+  color: #47B8D6;
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
@@ -24,7 +24,7 @@
   cursor: pointer;
   border-radius: 2px;
   font-size: 30px;
-  color: #E1E4EB;
+  color: #47B8D6;
   text-align: center;
   line-height: 35px;
   margin-right: 15px;
@@ -32,6 +32,6 @@
 }
 
 .font-awesome:hover {
-  color: #47B8D6;
+  color: #AE001B;
 }
 /*# sourceMappingURL=contact.css.map */
