--- a/src/components/css/variables.scss
+++ b/src/components/css/variables.scss
@@ -1,6 +1,6 @@
 $color-main: #01389D;
-$color-secondary: #47B8D6;
+$color-secondary:#E1E4EB;
 $color-red-demokrat: #AE001B;
 $color-white-demokrat: #E8E3DF;
-$color-text-demokrat: #E1E4EB;
+$color-text-demokrat:#47B8D6;
 $color-black: black;
