--- a/src/components/css/panel.css
+++ b/src/components/css/panel.css
@@ -7,8 +7,8 @@
   font-size: 20px;
   border: none;
   outline: none;
-  background-color: #47B8D6;
-  color: #E1E4EB;
+  background-color: #E1E4EB;
+  color: #47B8D6;
   cursor: pointer;
   padding: 15px;
   border-radius: 40px;
@@ -26,7 +26,7 @@
   padding-right: 40px;
   padding-bottom: 40px;
   padding-left: 40px;
-  background-color: #47B8D6;
+  background-color: #E1E4EB;
 }
 
 /* effect-shine */
@@ -49,8 +49,10 @@ a.panel-name:hover {
 }
 
 :target {
-  background-color: #E8E3DF;
+  background-color: #47B8D6;
   color: black;
+  border: 1rem solid #AE001B;
+  border-radius: 20px;
 }
 
 .foto {
