--- a/src/components/css/panel.scss
+++ b/src/components/css/panel.scss
@@ -51,8 +51,10 @@ a.panel-name:hover {
   }
 
   :target {
-      background-color: $color-white-demokrat;
+      background-color: $color-text-demokrat;
       color: $color-black;
+      border: 1rem solid $color-red-demokrat;
+      border-radius: 20px;
   }
 
 .foto {
